--- a/app/templates/stocks/details_enhanced.html
+++ b/app/templates/stocks/details_enhanced.html
@@ -410,7 +410,7 @@
                                     <i class="bi bi-graph-up"></i> Full teknisk analyse
                                 </a>
                                 <a href="{{ url_for('analysis.ai', ticker=ticker) }}" class="btn btn-outline-info">
-                                    <i class="bi bi-robot"></i> AI-analyse
+                                    <i class="bi bi-robot"></i> Vis AI analyse
                                 </a>
                                 <a href="{{ url_for('stocks.compare') }}?tickers={{ ticker }}" class="btn btn-outline-warning">
                                     <i class="bi bi-arrows-angle-expand"></i> Sammenlign
