­ƒÄ» COMPREHENSIVE PLATFORM FIXES COMPLETE

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -430,6 +430,13 @@
                         </ul>
                     </li>
                     
+                    <!-- ROI Calculator -->
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('main.roi_kalkulator') }}">
+                            <i class="bi bi-calculator"></i> ROI Kalkulator
+                        </a>
+                    </li>
+                    
                     <!-- User Dropdown -->
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">
