--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -344,6 +344,13 @@
                                 <i class="bi bi-mortarboard"></i> Benjamin Graham analyse
                             </a></li>
                             <li><hr class="dropdown-divider"></li>
+                            <li><a class="dropdown-item" href="{{ url_for('market_intel.insider_trading') }}">
+                                <i class="bi bi-eye-fill"></i> Innsidehandel
+                            </a></li>
+                            <li><a class="dropdown-item" href="{{ url_for('investment_analyzer.index') }}">
+                                <i class="bi bi-calculator-fill"></i> Investment Analyzer
+                            </a></li>
+                            <li><hr class="dropdown-divider"></li>
                             <li><a class="dropdown-item" href="{{ url_for('analysis.sentiment') }}">
                                 <i class="bi bi-emoji-smile"></i> Sentiment analyse
                             </a></li>
@@ -387,30 +394,6 @@
                             <i class="bi bi-newspaper"></i> Nyheter
                         </a>
                     </li>
-                    
-                    <!-- Tools Dropdown - Only for authenticated users -->
-                    {% if current_user.is_authenticated %}
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="{{ url_for('pro_tools.index') }}" role="button" data-bs-toggle="dropdown">
-                            <i class="bi bi-tools"></i> Verktøy
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="{{ url_for('analysis.ai') }}">
-                                <i class="bi bi-robot"></i> AI Analyse
-                            </a></li>
-                            <li><a class="dropdown-item" href="{{ url_for('analysis.technical') }}">
-                                <i class="bi bi-lightning"></i> Hurtiganalyse
-                            </a></li>
-                            <li><hr class="dropdown-divider"></li>
-                            <li><a class="dropdown-item" href="{{ url_for('advanced_features.currency_converter') }}">
-                                <i class="bi bi-arrow-left-right"></i> Valutakonverter
-                            </a></li>
-                            <li><a class="dropdown-item" href="{{ url_for('market_intel.insider_trading') }}">
-                                <i class="bi bi-eye-fill"></i> Innsidehandel
-                            </a></li>
-                        </ul>
-                    </li>
-                    {% endif %}
                     
                     <!-- Portfolio Dropdown -->
                     <li class="nav-item dropdown">
